# cli-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  configure-docs.sh  configure.sh  docs.sh  requirements-docs.txt  vcpkg-configuration.json  vcpkg.json
docs/: .gitignore  Doxyfile.in  conf.py  index.md  index.rst
docs/api/: greeting.md  greeting.rst
src/: greeting.cpp  greeting.hpp  main.cpp
tests/: test_main.cpp
